[gd_scene load_steps=11 format=3 uid="uid://main001"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Texture2D" path="res://assets/sprites/board_background.png" id="2_bg"]
[ext_resource type="Script" path="res://scripts/Drain.gd" id="2_drain"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="3_ui"]
[ext_resource type="PackedScene" uid="uid://launcher001" path="res://scenes/Launcher.tscn" id="4_launcher"]
[ext_resource type="PackedScene" uid="uid://flipper_left" path="res://scenes/FlipperLeft.tscn" id="5_flipper_l"]
[ext_resource type="PackedScene" uid="uid://flipper_right" path="res://scenes/FlipperRight.tscn" id="6_flipper_r"]
[ext_resource type="PackedScene" uid="uid://obstacle001" path="res://scenes/Obstacle.tscn" id="7_obstacle"]
[ext_resource type="PackedScene" uid="uid://skillshot001" path="res://scenes/SkillShot.tscn" id="8_skillshot"]

[sub_resource type="RectangleShape2D" id="WallLeft"]
size = Vector2(20, 620)

[sub_resource type="RectangleShape2D" id="WallRight"]
size = Vector2(20, 620)

[sub_resource type="RectangleShape2D" id="WallTop"]
size = Vector2(820, 20)

[sub_resource type="RectangleShape2D" id="DrainShape"]
size = Vector2(600, 40)

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Playfield" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="Playfield"]
position = Vector2(400, 300)
texture = ExtResource("2_bg")

[node name="Boundaries" type="Node2D" parent="Playfield"]

[node name="WallLeft" type="StaticBody2D" parent="Playfield/Boundaries"]
position = Vector2(10, 300)
collision_layer = 4
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Playfield/Boundaries/WallLeft"]
modulate = Color(0.5, 0.5, 0.5, 1)
position = Vector2(0, 0)
scale = Vector2(0.5, 15.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/Boundaries/WallLeft"]
shape = SubResource("WallLeft")

[node name="WallRight" type="StaticBody2D" parent="Playfield/Boundaries"]
position = Vector2(790, 300)
collision_layer = 4
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Playfield/Boundaries/WallRight"]
modulate = Color(0.5, 0.5, 0.5, 1)
position = Vector2(0, 0)
scale = Vector2(0.5, 15.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/Boundaries/WallRight"]
shape = SubResource("WallRight")

[node name="WallTop" type="StaticBody2D" parent="Playfield/Boundaries"]
position = Vector2(400, 10)
collision_layer = 4
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Playfield/Boundaries/WallTop"]
modulate = Color(0.5, 0.5, 0.5, 1)
position = Vector2(0, 0)
scale = Vector2(20.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/Boundaries/WallTop"]
shape = SubResource("WallTop")

[node name="Drain" type="Area2D" parent="Playfield"]
position = Vector2(300, 580)
collision_layer = 0
collision_mask = 1
script = ExtResource("2_drain")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/Drain"]
shape = SubResource("DrainShape")

[node name="Balls" type="Node2D" parent="."]

[node name="Launcher" parent="." instance=ExtResource("4_launcher")]
position = Vector2(700, 500)

[node name="FlipperLeft" parent="." instance=ExtResource("5_flipper_l")]
position = Vector2(360, 550)

[node name="FlipperRight" parent="." instance=ExtResource("6_flipper_r")]
position = Vector2(440, 550)

[node name="Obstacles" type="Node2D" parent="."]

[node name="Zone_AndroidAcres" type="Node2D" parent="Obstacles"]
position = Vector2(100, 300)

[node name="Zone_DinoDesert" type="Node2D" parent="Obstacles"]
position = Vector2(650, 400)

[node name="Zone_FlutterForest" type="Node2D" parent="Obstacles"]
position = Vector2(600, 150)

[node name="Zone_SparkyScorch" type="Node2D" parent="Obstacles"]
position = Vector2(100, 150)

[node name="Obstacle1" parent="Obstacles" instance=ExtResource("7_obstacle")]
position = Vector2(100, 100)
points = 5000

[node name="Obstacle2" parent="Obstacles" instance=ExtResource("7_obstacle")]
position = Vector2(100, 200)
points = 20000

[node name="Obstacle3" parent="Obstacles" instance=ExtResource("7_obstacle")]
position = Vector2(100, 300)
points = 20000

[node name="SkillShot" parent="." instance=ExtResource("8_skillshot")]
position = Vector2(600, 250)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ui")

[node name="HUD" type="HBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="ScoreLabel" type="Label" parent="UI/Control/HUD"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="MultiplierLabel" type="Label" parent="UI/Control/HUD"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "x1"

[node name="RoundsLabel" type="Label" parent="UI/Control/HUD"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Rounds: 3"

[node name="GameOverPanel" type="PanelContainer" parent="UI/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="UI/Control/GameOverPanel"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="UI/Control/GameOverPanel/VBox"]
layout_mode = 2
text = "Game Over"

[node name="ScoreLabel" type="Label" parent="UI/Control/GameOverPanel/VBox"]
layout_mode = 2
text = "0"

[node name="ReplayButton" type="Button" parent="UI/Control/GameOverPanel/VBox"]
layout_mode = 2
text = "Replay"
